# OPSI

./: MobileNetv2_FFAN_CurTriplet.py
Federated_Learning/: README.md  main_client.py  main_server.py  pyproject.toml
Federated_Learning/my_flower_app/: __init__.py  client_app.py  client_fn.py  server_app.py  task.py
